--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+@import '../src/assets/scss-vars/variables.scss';
+
+body{
+    margin: 0;
+font-family: Arial,Helvetica,sans-serif;;
+}
