--- a/src/app/cmps/about-me/about-me.component.scss
+++ b/src/app/cmps/about-me/about-me.component.scss
@@ -2,38 +2,74 @@
 
 .main-container {
   background-color: $background-color;
-  height: 100vh;
+  height: unset;
   display: flex;
+  align-items: center;
   justify-content: center;
+  flex-direction: column;
+  position: relative;
 
-  h2 {    
-    font-size: 1.4rem;
-    
-    text-align: center;
-    margin-block-end: 0;
-    color: #0050FF
+  @media (min-width: $breakpoint-small) {
+    height: 100vh;
+  }
+
+  .up-content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+
+    @media (min-width: $breakpoint-medium) {
+      flex-direction: row;
+    }
   }
 
   .about-content {
-    width: 100%;
-    height: 100%
+    width: 80%;
+
+    @media (min-width: $breakpoint-medium) {
+      width: 700px;
+    }
+  }
+
+  h2 {
+    display: none;
+    font-size: 4rem;
+    text-align: center;
+    margin-block-end: 0;
+    color: #0050FF;
+    position: absolute;
+    top: 10%;
+
+    @media (min-width: $breakpoint-medium) {
+      display: Block;
+    }
   }
 
   p {
-    text-align: center;
     font-size: 1.3rem;
     width: 85%;
     margin: auto;
     padding: 10px;
-  
-    @media (min-width: $breakpoint-small) {
+    pad: 30px;
+    text-align: center;
+
+    @media (min-width: $breakpoint-medium) {
+      text-align: left;
       width: 70%;
       padding: 40px;
       font-size: 1.8rem;
       width: 65%;
     }
   }
-  
+
+  .hello-title {
+    font-size: 2.2rem;
+    padding: 10px;
+    font-weight: 900;
+    margin-top: 32px;
+  }
+
   h5 {
     font-size: 1.4rem;
     text-align: center;
@@ -52,16 +88,75 @@
 
 
 .image-container {
-  width: 100%;
-  margin: auto;
   display: flex;
   justify-content: center;
-  
+  background-color: #f4ece6;
+  height: 500px;
+  width: 350px;
+  flex-direction: column;
+  margin: auto;
+  margin-bottom: 30px;
+
+  .card-my-name {
+    margin: auto;
+    font-weight: 600;
+    font-size: 1.8rem;
+    margin-bottom: 5px;
+  }
+
+  .about-me-card-footer {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    height: 50px;
+    align-items: center;
+
+    img {
+      height: 20px;
+      width: 20px;
+    }
+  }
+
+  .resume-btn {
+    background-color: DodgerBlue;
+    border: none;
+    color: white;
+    padding: 12px 12px;
+    cursor: pointer;
+    font-size: 20px;
+    text-decoration: none;
+    margin-bottom: 10px;
+    text-decoration: none;
+    margin-bottom: 10px;
+    border-radius: 5px;
+  }
+
+  .resume-btn:hover {
+    background: linear-gradient(to bottom, #304963 5%, #16297e 100%);
+    background-color: #634b30;
+  }
+
+  .resume-btn:active {
+    position: relative;
+    top: 1px;
+  }
+
+  .job-name {
+    margin: auto;
+    margin-top: 5px;
+    margin-top: 5px;
+    font-size: 1.3rem;
+    margin-bottom: 25px;
+    letter-spacing: 1.5px;
+  }
+
   .my-image {
     height: 300px;
-    width: 85%;
+    width: 300px;
+    border-radius: 50%;
+    margin: auto;
   }
-  
+
   .about-me-name {
     position: absolute;
     text-align: center;
@@ -72,21 +167,16 @@
     box-shadow: inset 26px 20px 5px -7px rgba(0, 0, 0, 0.1), inset -22px -26px 0px -4px rgba(0, 0, 0, 0.1);
     width: 100px;
   }
-  
-  @media (min-width: $breakpoint-small) {
-    width: 70%;
-    margin-top: 30px;
 
-    h2{
-      font-size: 2.5rem;
-    }
+  @media (min-width: $breakpoint-small) {
+
     .my-image {
       margin: auto;
-      height: 600px;
-      width: 600px;
+      height: 300px;
+      width: 300px;
     }
   }
-  
+
 
   // Tablet styles...
 }
