--- a/src/app/cmps/contact-me/contact-me.component.html
+++ b/src/app/cmps/contact-me/contact-me.component.html
@@ -54,7 +54,7 @@
     </div>
 
     <div class="user-message" *ngIf="isSuccess">
-     Thank you {{username}} your details has been send successfully
+      {{username}} , thank you !  your details has been send successfully.
     </div>
     <img
       *ngIf="isLoaderActive"
