Contact me - finish form

--- a/src/app/cmps/contact-me/contact-me.component.html
+++ b/src/app/cmps/contact-me/contact-me.component.html
@@ -1,7 +1,9 @@
 <div class="main-container">
-  <div class="contact-me-title">Contact Me</div>
-  <form class="main-form" [formGroup]="contactMeForm">
-    <input
+  <div class="form-container">
+    <div class="contact-me-title"> <span class="blue-square"></span> Contact Me</div>
+
+    <form class="main-form" [formGroup]="contactMeForm">
+      <input
       type="text"
       placeholder="First Name"
       aria-label="First Name"
@@ -9,15 +11,15 @@
       formControlName="firstName"
       class="first-name-input"
       (input)="capitalizeFirstLetter('firstName')"
-    />
+      />
 
-    <div *ngIf="shouldDisplayError('firstName')">
-      <p class="not-valid" *ngIf="contactMeForm.get('firstName')?.hasError('required')">First Name is required</p>
-      <p class="not-valid" *ngIf="contactMeForm.get('firstName')?.hasError('pattern')">First Name must be just Alphabetical</p>
-      <p class="not-valid" *ngIf="contactMeForm.get('firstName')?.hasError('minlength')">First Name must be at least 2 characters</p>
-    </div>
-
-    <input
+      <div *ngIf="shouldDisplayError('firstName')">
+        <p class="not-valid" *ngIf="contactMeForm.get('firstName')?.hasError('required')">First Name is required</p>
+        <p class="not-valid" *ngIf="contactMeForm.get('firstName')?.hasError('pattern')">First Name must be just Alphabetical</p>
+        <p class="not-valid" *ngIf="contactMeForm.get('firstName')?.hasError('minlength')">First Name must be at least 2 characters</p>
+      </div>
+      
+      <input
       type="text"
       placeholder="Last Name"
       aria-label="Last Name"
@@ -25,25 +27,25 @@
       formControlName="lastName"
       class="last-name-input"
       (input)="capitalizeFirstLetter('lastName')"
-    />
-
-    <div *ngIf="shouldDisplayError('lastName')">
-      <p class="not-valid" *ngIf="contactMeForm.get('lastName')?.hasError('required')">Last Name is required</p>
-      <p class="not-valid" *ngIf="contactMeForm.get('lastName')?.hasError('pattern')">Last Name must have just Alphabetical</p>
-      <p class="not-valid" *ngIf="contactMeForm.get('lastName')?.hasError('minlength')">Last Name must be at least 2 characters</p>
-    </div>
-
-    <input
+      />
+      
+      <div *ngIf="shouldDisplayError('lastName')">
+        <p class="not-valid" *ngIf="contactMeForm.get('lastName')?.hasError('required')">Last Name is required</p>
+        <p class="not-valid" *ngIf="contactMeForm.get('lastName')?.hasError('pattern')">Last Name must have just Alphabetical</p>
+        <p class="not-valid" *ngIf="contactMeForm.get('lastName')?.hasError('minlength')">Last Name must be at least 2 characters</p>
+      </div>
+      
+      <input
       type="email"
       placeholder="email@example.com"
       matInput
       formControlName="email"
-    />
-    <div *ngIf="shouldDisplayError('email')">
-      <p class="not-valid" *ngIf="contactMeForm.get('email')?.hasError('required')">Email is required</p>
-      <p class="not-valid" *ngIf="contactMeForm.get('email')?.hasError('email')">Invalid email format</p>
-    </div>
-    <input
+      />
+      <div *ngIf="shouldDisplayError('email')">
+        <p class="not-valid" *ngIf="contactMeForm.get('email')?.hasError('required')">Email is required</p>
+        <p class="not-valid" *ngIf="contactMeForm.get('email')?.hasError('email')">Invalid email format</p>
+      </div>
+      <input
       type="text"
       matInput
       placeholder="XXX - XXXXXXX"
@@ -52,26 +54,27 @@
     <div *ngIf="shouldDisplayError('phone')">
       <p class="not-valid" *ngIf="contactMeForm.get('phone')?.hasError('pattern')">Phone number is not valid</p>
     </div>
-
+    
     <div class="user-message" *ngIf="isSuccess">
       {{username}} , thank you !  your details has been send successfully.
     </div>
     <img
-      *ngIf="isLoaderActive"
-      class="loader"
-      src="https://v.fastcdn.co/u/430e104e/57579327-0-Loaders-3.svg"
-      alt=""
+    *ngIf="isLoaderActive"
+    class="loader"
+    src="https://v.fastcdn.co/u/430e104e/57579327-0-Loaders-3.svg"
+    alt=""
     />
     <button
-      class="submit-btn"
-      (click)="onSubmit()"
-      [disabled]="
+    class="submit-btn"
+    (click)="onSubmit()"
+    [disabled]="
        contactMeForm.invalid
-      "
+       "
       mat-raised-button
       type="submit"
-    >
+      >
       Submit
     </button>
   </form>
+</div>
 </div>
