--- a/src/app/cmps/contact-me/contact-me.component.scss
+++ b/src/app/cmps/contact-me/contact-me.component.scss
@@ -3,6 +3,7 @@
 .main-container {
     background-color: $background-color;
     height: 100vh;
+    display: flex;
 
     .user-message {
         display: flex;
@@ -23,6 +24,15 @@
         font-size: 30px;
         letter-spacing: 3px;
         padding-top: 15px;
+        font-weight: 600;
+
+        .blue-square {
+            height: 20px;
+            width: 20px;
+            background-color: #0050ff;
+            margin-right: 10px;
+            margin-bottom: 2px;
+        }
 
         img {
             height: 25px;
@@ -32,6 +42,23 @@
         span {
             margin-left: 6px;
             color: blue;
+        }
+    }
+
+    .form-container {
+        height: 600px;
+        background-color: #fefefe;
+        padding-top: 20px;
+        width: 97%;
+        margin: auto;
+
+        form {
+            height: 75%;
+        }
+
+        @media (min-width: $breakpoint-small) {
+            margin-top: 40px;
+            width: 600px;
         }
     }
 
@@ -84,7 +111,7 @@
 
         @media (min-width: $breakpoint-medium) {
             margin-top: 15px;
-            width: 50%;
+            width: 90%;
             max-width: 500px;
         }
 
