--- a/src/app/cmps/header/header.component.html
+++ b/src/app/cmps/header/header.component.html
@@ -1,24 +1,28 @@
 <section class="app-main-header">
   <nav class="nav-right">
-    <div class="nav-logo" routerLink="/about-me">{{ title }} </div>
-    <div (click)="isMobile = ! isMobile" class="menu-mobile-icon"><img src="assets/images/menu.svg" alt=""></div>
+    
+    <div class="nav-logo" routerLink="/about-me">
+      <span class="blue-square" style="height: 10px;"></span>  {{ title }}<span>{{ subtitle }}</span>
+    </div>
+    <div (click)="isMobile = !isMobile" class="menu-mobile-icon">
+      <img src="assets/images/menu.svg" alt="" />
+    </div>
     <div class="right-nav">
-      <a *ngFor="let link of links" routerLink="{{ link.routerLink }}">
+      <a *ngFor="let link of links" routerLink="{{ link.routerLink }}" >
         <span class="border-link" *ngIf="link.title !== 'About Me'">|</span>
-        <span
-          >{{ link.title }}
-        </span>
+        <span routerLinkActive="active-link">{{ link.title }} </span>
       </a>
     </div>
   </nav>
 </section>
-
 <section class="mobile-nav" *ngIf="isMobile">
-  <div (click)="isMobile = false" >
-    <a class="right-nav-links" *ngFor="let link of links"  routerLink="{{ link.routerLink }}">
-      <span 
-        >{{ link.title }}
-      </span>
+  <div (click)="isMobile = false">
+    <a
+      class="right-nav-links"
+      *ngFor="let link of links"
+      routerLink="{{ link.routerLink }}"
+    >
+      <span>{{ link.title }} </span>
     </a>
   </div>
 </section>
