--- a/src/app/cmps/header/header.component.html
+++ b/src/app/cmps/header/header.component.html
@@ -2,7 +2,7 @@
   <nav class="nav-right">
     
     <div class="nav-logo" routerLink="/about-me">
-      <span class="blue-square" style="height: 10px;"></span>  {{ title }}<span>{{ subtitle }}</span>
+      <span class="blue-square"></span>  {{ title }}<span>{{ subtitle }}</span>
     </div>
     <div (click)="isMobile = !isMobile" class="menu-mobile-icon">
       <img src="assets/images/menu.svg" alt="" />
