--- a/src/app/cmps/contact-me/contact-me.component.scss
+++ b/src/app/cmps/contact-me/contact-me.component.scss
@@ -116,17 +116,24 @@
         }
 
         .submit-btn {
-            background-color: #669f71;
-            width: 50%;
-            margin: auto;
-            font-size: large;
-            font-weight: 600;
-            border-radius: 10px;
+            background: #116dff;
             border: none;
-            height: 40px;
+            border-radius: 21px;
+            color: #fff;
+            cursor: pointer;
+            display: inline-block;
+            height: 42px;
+            line-height: 42px;
+            padding: 0 27px;
+            text-align: center;
+            text-decoration: none;
+            white-space: nowrap;
+            width: 50%;
+            font-size: 1.2rem;
+            margin: auto;
 
             &:hover {
-                background-color: #468051;
+                background-color: #307fff;
                 cursor: pointer;
             }
         }
