--- a/src/app/cmps/education/education.component.scss
+++ b/src/app/cmps/education/education.component.scss
@@ -43,7 +43,7 @@
 
         h3 {
             font-size: 1.5rem;
-            color: #0050FF
+            color: $title-blue-color
         }
 
         p {
