--- a/src/app/cmps/footer/footer.component.scss
+++ b/src/app/cmps/footer/footer.component.scss
@@ -8,11 +8,11 @@
     justify-content: center;
     display: flex;
 
-    .icon-svg{
+    .icon-box{
         height: 28px;
         width: 28px;
     }
-    .github-icon{
+    .icon{
         height: 28px;
         width: 28px;
         margin-top: 3px;
