--- a/src/app/cmps/personal-projects/personal-projects.component.scss
+++ b/src/app/cmps/personal-projects/personal-projects.component.scss
@@ -90,7 +90,7 @@
             margin-block-start: 0;
             text-align: center;
             font-size: 1.6rem;
-            color: #0050FF;
+            color: $title-blue-color;
         }
 
         p {
