--- a/src/app/cmps/contact-me/contact-me.component.scss
+++ b/src/app/cmps/contact-me/contact-me.component.scss
@@ -29,7 +29,7 @@
         .blue-square {
             height: 20px;
             width: 20px;
-            background-color: #0050ff;
+            background-color: $title-blue-color;
             margin-right: 10px;
             margin-bottom: 2px;
         }
@@ -131,6 +131,16 @@
             width: 50%;
             font-size: 1.2rem;
             margin: auto;
+
+            &:disabled {
+                background: #d3d3d3;
+                cursor: not-allowed;
+                color: #808080;
+                &:hover {
+                    background-color: #d3d3d3;
+                    cursor: pointer;
+                }
+            }
 
             &:hover {
                 background-color: #307fff;
