--- a/src/app/cmps/footer/footer.component.html
+++ b/src/app/cmps/footer/footer.component.html
@@ -1,17 +1,13 @@
 <div class="main-container-footer">
-  <div class="icon-svg">
+  <div class="icon-box">
     <a href="https://www.linkedin.com/in/dekel-ido" target="_blank">
-      <img
-        class="github-icon"
-        src="../../../assets/images/linkedin.svg"
-        alt=""
-      />
+      <img class="icon" src="../../../assets/images/linkedin.svg" alt="" />
     </a>
   </div>
 
-  <div class="icon-svg">
+  <div class="icon-box">
     <a href="https://github.com/dekelIdo" target="_blank">
-      <img class="github-icon" src="../../../assets/images/github.svg" alt="" />
+      <img class="icon" src="../../../assets/images/github.svg" alt="" />
     </a>
   </div>
 </div>
