--- a/src/app/cmps/header/header.component.html
+++ b/src/app/cmps/header/header.component.html
@@ -1,22 +1,26 @@
 <section class="app-main-header">
   <nav class="nav-right">
-    
-    <div class="nav-logo" routerLink="/about-me">
-      <span class="blue-square"></span>  {{ title }}<span>{{ subtitle }}</span>
+    <div class="nav-logo" routerLink="/">
+      <span class="blue-square"></span> {{ title}}
+      <span class="subtitle">{{ subtitle }}</span>
     </div>
-    <div (click)="isMobile = !isMobile" class="menu-mobile-icon">
+    <div (click)="isMenuOpen = !isMenuOpen" class="menu-mobile-icon">
       <img src="assets/images/menu.svg" alt="" />
     </div>
     <div class="right-nav">
-      <a *ngFor="let link of links" routerLink="{{ link.routerLink }}" >
+      <a *ngFor="let link of links" routerLink="{{ link.routerLink }}">
         <span class="border-link" *ngIf="link.title !== 'About Me'">|</span>
-        <span routerLinkActive="active-link">{{ link.title }} </span>
+        <span
+          routerLinkActive="active-link"
+          [routerLinkActiveOptions]="{ exact: true }"
+          >{{ link.title }}
+        </span>
       </a>
     </div>
   </nav>
 </section>
-<section class="mobile-nav" *ngIf="isMobile">
-  <div (click)="isMobile = false">
+<section [ngClass]="isMenuOpen ? classMenuOpen : classMenuClose">
+  <div (click)="isMenuOpen = false">
     <a
       class="right-nav-links"
       *ngFor="let link of links"
