--- a/src/assets/scss-vars/variables.scss
+++ b/src/assets/scss-vars/variables.scss
@@ -1,5 +1,6 @@
 $breakpoint-small: 700px;
 $breakpoint-medium: 1124px; 
-// $background-color:#f5f2f2;
+$breakpoint-large:1300px;
 $background-color:rgba(230,218,206);
+$title-blue-color:#0050ff;
 $preview-color: #f6f6f6;
